# c-build-tools

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  LICENSE  ms_Azure.txt
build_functions/: CMakeLists.txt  CMakeLists.txt.orig  common_suppresions.sup  default_vld.ini  disable_vld.ini  ignore_function_names_vld.ini  launchSettings.json.in  main_cpp_unittest.cpp  manifest.xml  nothing.c  use_vld.c
iwyu/: rules.imp
real_check/test/: CMakeLists.txt  test_real_check.ps1
real_check/test/both/: CMakeLists.txt  both.c
real_check/test/inc/real_check_test/: dummy.h
real_check/test/reals/: CMakeLists.txt  real_dummy.c  real_dummy.h
real_check/test/src/: dummy.c
reals_check/: CMakeLists.txt  reals_check.md  reals_check.ps1
reals_check/test/: CMakeLists.txt  dummy_source.c  test_reals_check.ps1
reals_check/test/both/: CMakeLists.txt  both.c
reals_check/test/inc/reals_check_test/: dummy.h
reals_check/test/reals/: CMakeLists.txt  reals_dummy.c  reals_dummy.h  reals_dummy_renames.h
reals_check/test/src/: dummy.c
repo_validation/: CMakeLists.txt  README.md
repo_validation/scripts/: validate_aaa_comments.ps1  validate_c_build_tools_ref.ps1  validate_crlf_line_endings.ps1  validate_enable_mocks_pattern.ps1  validate_file_endings.ps1  validate_no_backticks_in_srs.ps1  validate_no_tabs.ps1  validate_no_vld_include.ps1  validate_requirements_naming.ps1  validate_srs_consistency.ps1  validate_srs_tag_placement.ps1  validate_srs_uniqueness.ps1  validate_test_spec_tags.ps1  validate_timed_test_suite.ps1
repo_validation/src/: CMakeLists.txt  file_walker.c  main.c  repo_validator.h
repo_validation/src/checks/: check_aaa_comments.c  check_enable_mocks.c  check_file_endings.c  check_no_backticks_in_srs.c  check_no_tabs.c  check_no_vld_include.c  check_requirements_naming.c  check_srs_consistency.c  check_srs_format.c  check_srs_uniqueness.c  check_test_spec_tags.c
repo_validation/src_rust/: CMakeLists.txt  Cargo.toml  build_repo_validator.cmake  rust-toolchain.toml
repo_validation/src_rust/src/: config.rs  file_walker.rs  main.rs
repo_validation/src_rust/src/checks/: aaa_comments.rs  c_build_tools_ref.rs  enable_mocks.rs  file_endings.rs  mod.rs  no_backticks_in_srs.rs  no_tabs.rs  no_vld_include.rs  requirements_naming.rs  srs_consistency.rs  srs_format.rs  srs_uniqueness.rs  test_spec_tags.rs
repo_validation/tests/: CMakeLists.txt
repo_validation/tests/validate_aaa_comments/: CMakeLists.txt  expect_validation_failure.cmake
repo_validation/tests/validate_aaa_comments/has_aaa/: CSharpAaaTests.cs  test_csharp_aaa.cs  test_direct_aaa_ut.c  test_exempted_ut.c  test_helper_aaa_ut.c  test_mixed_styles_ut.c  test_nested_parens_ut.c  test_parameterized_ut.c  test_string_braces_ut.c
repo_validation/tests/validate_aaa_comments/missing_aaa/: test_missing_act_ut.c  test_missing_arrange_ut.c  test_missing_assert_ut.c  test_nested_parens_missing_aaa_ut.c  test_no_aaa_ut.c  test_string_braces_missing_aaa_ut.c  test_wrong_order_ut.c
repo_validation/tests/validate_aaa_comments/missing_aaa_csharp/: CSharpCombinedActAssertTests.cs
repo_validation/tests/validate_aaa_comments/missing_aaa_parameterized/: test_parameterized_missing_aaa_ut.c
repo_validation/tests/validate_aaa_comments/missing_aaa_partial/: test_partial_aaa_ut.c
repo_validation/tests/validate_c_build_tools_ref/: CMakeLists.txt
repo_validation/tests/validate_enable_mocks_pattern/: CMakeLists.txt
repo_validation/tests/validate_enable_mocks_pattern/has_violations/: multiple_patterns.cpp  sample_with_mixed_force.c  sample_with_mixed_force_expected.c  test_file.c  test_file.h
repo_validation/tests/validate_enable_mocks_pattern/no_violations/: clean_file.c  clean_file.h  multiple_correct.cpp  sample_with_force_lowercase.c  sample_with_force_mixedcase.c  sample_with_force_uppercase.c
repo_validation/tests/validate_file_endings/: CMakeLists.txt
repo_validation/tests/validate_file_endings/missing_crlf/: no_ending.c  no_ending.h
repo_validation/tests/validate_file_endings/proper_crlf/: good_file.c  good_file.h
repo_validation/tests/validate_no_backticks_in_srs/: CMakeLists.txt
repo_validation/tests/validate_no_backticks_in_srs/has_backticks/: sample_with_backticks.c  sample_with_backticks.h
repo_validation/tests/validate_no_backticks_in_srs/has_backticks_cs/: sample_with_backticks.cs
repo_validation/tests/validate_no_backticks_in_srs/no_backticks/: sample_clean.c  sample_clean.cs  sample_clean.h  sample_with_non_srs_backticks.c
repo_validation/tests/validate_no_tabs/: CMakeLists.txt
repo_validation/tests/validate_no_tabs/has_tabs/: test_file.c  test_file.h  test_file.md
repo_validation/tests/validate_no_tabs/no_tabs/: clean_file.c  clean_file.h  test_file.md
repo_validation/tests/validate_no_vld_include/: CMakeLists.txt
repo_validation/tests/validate_no_vld_include/has_vld_include/: sample_with_ifdef.c  sample_with_ifdef_comment.cpp  sample_with_ifdef_mixed.c  sample_with_ifdef_multiple_newlines.h  sample_with_ifdef_other_code.c  sample_with_ifdef_other_code_expected.c  sample_with_ifdef_spaces.h  sample_with_other_comment.c  sample_with_vld.c  sample_with_vld.h  sample_with_vld.txt
repo_validation/tests/validate_no_vld_include/no_vld_include/: sample_clean.c  sample_clean.h  sample_clean.txt  (+4 more)
repo_validation/tests/validate_requirements_naming/: CMakeLists.txt
repo_validation/tests/validate_srs_consistency/: CMakeLists.txt  test_malformed_srs_tag_output.ps1  test_tag_placement_output.ps1
repo_validation/tests/validate_srs_format/: CMakeLists.txt
repo_validation/tests/validate_srs_uniqueness/: CMakeLists.txt
repo_validation/tests/validate_test_spec_tags/: CMakeLists.txt
repo_validation/tests/validate_timed_test_suite/: CMakeLists.txt
repo_validation/tests_rust/: CMakeLists.txt
sarif_results_checker/: App.config  CMakeLists.txt  Options.cs  Program.cs
traceabilitytool/: CMakeLists.txt  consolereportwriter.cs
traceabilitytool/csharp_sdk_fix/: CMakeLists.txt
traceabilitytool/traceability_tool/: consolereportwriter.cs  packages.config  program.cs  traceabilitytool.csproj
(+224 files in other folders)
